Added userDesign in index.html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   
   <main>
 
+    <div id="userDesign">
+      <a href="proyectoUserDesign/userDesign.html"><img id="imgUserDesign" src="img/userDesign.png" alt="Diseña tu propio robot"></a>
+    </div>
+
     <!--CARRUSEL -->
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
