Improved index and style files for better integration with userDesign file

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
   
   <main>
 
-    <div id="userDesign">
       <a href="proyectoUserDesign/userDesign.html"><img id="imgUserDesign" src="img/userDesign.png" alt="Diseña tu propio robot"></a>
-    </div>
+    
 
     <!--CARRUSEL -->
 
@@ -129,7 +128,7 @@
             <h2>ZARA-7</h2>
             <p>Robot explorador espacial con capacidades avanzadas para el análisis de terrenos y la recopilación de datos en ambientes extraterrestres. Puede sobrevivir en condiciones extremas.</p>
             <button>
-              Ver mas
+              Ver más
             </button>
           </div>
         </article>
@@ -144,7 +143,7 @@
             <h2>VORTEX</h2>
             <p>Robot de educación para niños, diseñado para ofrecer experiencias interactivas y educativas. Puede contar cuentos, jugar juegos educativos y enseñar. Su programación incluye una serie de módulos educativos.</p>
             <button>
-              Ver mas
+              Ver más
             </button>
         </div>
         </article>
@@ -159,7 +158,7 @@
             <h2>TITAN</h2>
             <p>Robot asistente de salud, especializado en la monitorización de signos vitales y en la administración de medicamentos. Comunica actualizaciones de salud en tiempo real y proporcionar alertas en caso de emergencias.</p>
             <button>
-              Ver mas
+              Ver más
             </button>
           </div>
         </article>
@@ -174,7 +173,7 @@
             <h2>ASTRA</h2>
             <p>Robot de asistencia personal para viajeros. Incluye módulo de GPS avanzado, batería de larga duración y sistema de comunicación con redes globales. Envia alertas a contactos de emergencia en caso de necesidad.</p> 
             <button>
-              Ver mas
+              Ver más
             </button>
           </div>
         </article>
@@ -189,7 +188,7 @@
             <h2>ROBOX</h2>
             <p>Robot de mantenimiento industrial. Está equipado con herramientas especializadas para el mantenimiento y la reparación de maquinaria, y su visión artificial le permite detectar fallas y realizar diagnósticos precisos.</p>
             <button>
-              Ver mas
+              Ver más
             </button>
           </div>
         </article>
