--- a/proyectoUserDesign/userDesign.html
+++ b/proyectoUserDesign/userDesign.html
@@ -72,7 +72,7 @@
                 
           <button class="buttons1" type="submit">Añadir</button>
           <button class="buttons1" type="submit">Limpiar</button>
-          <h5>Recuerda registrate y contactarnos para finalizar el proceso.</h5>
+          <h5>Recuerda registrarte y contactarnos para finalizar el proceso.</h5>
         </form>
         <br>
       </div>
